# custom_home_system

./: README.md
libcontrol/: .gitignore  Makefile.in  aclocal.m4  configure  configure.ac  configure~
libcontrol/autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
libcontrol/build-aux/: ltmain.sh
libcontrol/include/: control.h
libcontrol/lib/: Makefile.am  Makefile.in  control.c  libRaspberry.c
libcontrol/m4/: libtool.m4  ltversion.m4
libcontrol/src/: Makefile.am  Makefile.in  api.py  main.c
web/backend/: server.py
web/frontend/smart-home/: package-lock.json  package.json
web/frontend/smart-home/public/: index.html
web/frontend/smart-home/src/: App.jsx
web/frontend/smart-home/src/components/camera/: CameraContainer.css  CameraContainer.jsx
web/frontend/smart-home/src/components/home/: Home.css  Home.jsx
web/frontend/smart-home/src/components/lightButton/: LightButton.css  LightButton.jsx
web/frontend/smart-home/src/components/loginFields/: LoginFields.css  LoginFields.jsx
web/frontend/smart-home/src/components/loginForm/: LoginForm.css  LoginForm.jsx
web/frontend/smart-home/src/components/navbar/: Navbar.jsx
webapp/: app.py
webapp/static/css/: cameraContainer.css  index.css  lightButton.css  loginForm.css  navbar.css  styles.css  toggleLights.css
webapp/static/js/: home.js
webapp/templates/: home.html  index.html  login.html
webapp/templates/components/: cameraContainer.html  lightButton.html  loginFields.html  navbar.html  toggleLights.html
(+2 files in other folders)
